fixed z-index and long name overflow issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,6 +23,7 @@
   }
 
   main {
+    @apply relative
     /* 
       each main component can have different layout, avoid adding
       global positioning, style them individually instead
